<resources>
    <string name="app_name">Diplom</string>
    <string name="posts_title">Posts</string>
    <string name="events_title">Events</string>
    <string name="home_title">Home</string>
    <string name="registration_title">Регистрация</string>
    <string name="login_hint">Логин*</string>
    <string name="password_hint">Пароль*</string>
    <string name="name_hint">Имя*</string>
    <string name="add_avatar_label">Добавить аватар</string>
    <string name="login_title">Вход</string>
    <string name="login_button">Войти</string>
    <string name="registration_link"><i>Зарегистрироваться</i></string>
    <string name="add_post_content_label">Контент</string>
    <string name="link_post_add">Ссылка</string>
    <string name="coords_add_post">Добавить координаты</string>
    <string name="media_add_post">Медиа</string>
    <string name="title_edit_post_form">Редактирование</string>
    <string name="add_media">Добавить</string>
    <string name="event_type_label">Тип события</string>
    <string name="date_time_label">Дата/время:</string>
    <string name="online_radiobutton">online</string>
    <string name="offline_radiobutton">offline</string>
    <string name="job_name">Название организации</string>
    <string name="job_position">Должность</string>
    <string name="job_start_date_time">Дата начала:</string>
    <string name="job_finish_date_time">Дата окончания:</string>
    <string name="job_current">По настоящее время:</string>
    <string name="event_type">Формат события:</string>
    <string name="event_place">Место:</string>
    <string name="user_jobs">Карьера:</string>
    <string name="add_job">Добавить</string>
    <string name="user_posts">Мои посты:</string>
    <string name="error_event_content">Введите текст события</string>
    <string name="button_event_participate">Участвовать</string>
    <string name="button_event_not_participate">Не участвовать</string>
    <string name="error_job_position">Введите должность</string>
    <string name="error_job_name">Введите название организации</string>
    <string name="error_login">Введите логин</string>
    <string name="error_password">Введите пароль</string>
    <string name="error_name">Введите имя</string>
    <string name="error_post_content">Введите текст поста</string>
    <string name="error_empty_fields">Заполните все поля</string>
</resources>