<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Добавить событие"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/content_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/content_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_post_content_label"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorTextColor="@color/colorAccentRed"
                    app:hintTextColor="@color/ship_cove"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/content_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:minLines="8"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/link_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_layout_text">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/link_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/link_post_add"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorTextColor="@color/colorAccentRed"
                    app:hintTextColor="@color/ship_cove"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/link_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/date_time_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_layout_text"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/date_time_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/date_time_label"/>

                <TextView
                    android:id="@+id/date_time_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="24.12.2022 13:30"/>

                <ImageView
                    android:id="@+id/add_date_time_imageview"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/purple_500"/>


            </LinearLayout>


            <CheckBox
                android:id="@+id/coords_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:buttonTint="@color/purple_500"
                android:text="@string/coords_add_post"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_time_layout"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mapview"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coords_checkbox"/>

            <TextView
                android:id="@+id/event_type_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/event_type_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mapview"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_type_label_textview">

                <RadioButton
                    android:id="@+id/radio_offline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:buttonTint="@color/purple_500"
                    android:checked="true"
                    android:text="@string/offline_radiobutton"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/radio_online"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:checked="false"
                    android:text="@string/online_radiobutton"
                    android:textSize="16sp"/>
            </RadioGroup>

            <TextView
                android:id="@+id/add_attachments_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/media_add_post"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

            <ImageView
                android:id="@+id/show_media_imageview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="30dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_attachments_textview"/>

            <ImageView
                android:id="@+id/cancel_media_imageview"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_cancel"
                app:layout_constraintEnd_toEndOf="@id/show_media_imageview"
                app:layout_constraintTop_toTopOf="@id/show_media_imageview"
                app:tint="@color/purple_500"
                />

            <Button
                android:id="@+id/add_media_button"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_add_button"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_add"
                android:drawableTint="@color/white"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_add"
                android:text="@string/add_media"
                app:layout_constraintStart_toStartOf="@id/add_attachments_textview"
                app:layout_constraintTop_toBottomOf="@id/add_attachments_textview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/progress_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>