<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/registration_title"
                android:textColor="@color/colorTextTitle"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/login_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorTextColor="@color/colorAccentRed"
                    app:hintTextColor="@color/ship_cove">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/password_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_layout_text">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorTextColor="@color/colorAccentRed"
                    app:hintTextColor="@color/ship_cove">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/name_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout_text">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorTextColor="@color/colorAccentRed"
                    app:hintTextColor="@color/ship_cove">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/add_attachments_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_avatar_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/add_media_button"
                app:layout_constraintTop_toTopOf="@id/add_media_button" />

            <ImageView
                android:id="@+id/add_media_button"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_add"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/name_layout_text"
                app:layout_constraintStart_toEndOf="@id/add_attachments_textview"
                android:layout_height="wrap_content"
                app:tint="@color/purple_500"/>

            <ImageView
                android:id="@+id/show_media_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:src="@drawable/shape_light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_attachments_textview" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/purple_500"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/registration_title"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_media_imageview" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/progress_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>