<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/author_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/avatar_imageview"
        app:layout_constraintStart_toEndOf="@id/avatar_imageview"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/author_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="Василий Пупкин"/>
    </LinearLayout>

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_imageview"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_view"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/jobs_layout"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/jobs_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/user_jobs"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/add_job_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_add_circle"
                    android:text="@string/add_job"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="@id/jobs_label_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_jobs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/jobs_label_textview"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator2_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/posts_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/posts_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/user_posts"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/add_post_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_add_circle"
                    android:text="@string/add_job"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="@id/posts_label_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_posts"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/posts_label_textview"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>